--- a/finalProject/frontend/admins.css
+++ b/finalProject/frontend/admins.css
@@ -82,7 +82,7 @@
 
 body{
 
-    background-image: url('../images/desert.png');
+    background-image: url('../images/d.png');
     background-size: 100%;
     background-repeat: no-repeat; 
 }
